--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
             <version>3.12.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.3</version> <!-- 请使用最新版本 -->
+        </dependency>
     </dependencies>
 
     <distributionManagement>
