swap parse finish

--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,16 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.3</version> <!-- 请使用最新版本 -->
         </dependency>
+        <dependency>
+            <groupId>com.syntifi.near</groupId>
+            <artifactId>borshj</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
